service_ingress/domain_based_routing/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-learing-journey-app-deployment
  labels:
    app: k8-learning-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8-learing-journey-app
  template:
    metadata:
      labels:
        app: k8-learing-journey-app
    spec:
      containers:
      - name: my-kubernetes-learing-journey-portfolio-application-image
        image:  sudipta4docker/domain-based-routing:v2.0.2
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
          requests:
            cpu: 100m
