service_ingress/domain_based_routing/k8-learing-journey-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-k8s-learing-journey
spec:
  type: NodePort
  selector:
    app: k8-learing-journey-app
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30001
