service_ingress/domain_based_routing/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-learning.clunex.in
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80

      - path: /healthz   # 👈 ADD THIS HERE
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
