service_ingress/domain_based_routing/domain-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-k8-learing-journey-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "k8s-learning.clunex.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-k8s-learing-journey
            port:
              number: 80
