service_ingress/domain_based_routing/main_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  ingressClassName: nginx
  rules:

  # ✅ health check WITHOUT host (VERY IMPORTANT)
  - http:
      paths:
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80

  # ✅ normal traffic WITH host
  - host: k8s-learning.clunex.in
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-k8s-learing-journey
            port:
              number: 80
